--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,10 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.head-custom{
+  color:#ffcc00;
+}
+.para-custom{
+  font-size:16px;
+  color:grey;
+}
