--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,14 @@
 .margin-fix{
   margin-top:20px;
 }
+.color-fix{
+  color:grey;
+  margin-top:2px;
+  border-bottom:1px solid grey;
+  width:100px;
+}
+.border-fix{
+  border-bottom:1px solid grey;
+  margin-top:20px !important;
+  
+}
