--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,13 @@
   text-align: left;
   white-space: nowrap
 }
+.header-color{
+  color:grey;
+  border-bottom:1px solid grey;
+}
+.butn-top{
+  margin-top:13px;
+}
+.gragh-top{
+  margin-top:40px;
+}
