--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,8 @@
   color:grey;
 }
 .overflow{
-  /* overflow-x: hidden;
-  overflow-y: hidden; */
+  overflow-x: hidden;
+  /* overflow-y: hidden;  */
 }
 .margin-20{
   margin-top:20px;
@@ -73,4 +73,16 @@
   color: #fff;
   text-align: left;
   white-space: nowrap
+}
+.graphcenter{
+  margin-left: 20px;
+}
+.backbtn{
+  margin-left: 20px;
+  margin-top: 25px !important;
+}
+h2{
+  color:grey;
+  margin-left:-207px;
+  margin-top: 23px;
 }
