--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,15 @@
   color: white;
 }
 
+.background-grey {
+  background-color: #f3f3f2;
+}
+
+.border-5{
+  border: 12px solid white;
+  border-radius: 5px;
+}
+
 .App-title {
   font-size: 1.5em;
 }
