--- a/src/App.css
+++ b/src/App.css
@@ -127,3 +127,9 @@
   font-size: 21px;
   color:grey;
 }
+.header-color2{
+  margin-top: 21px;
+  font-size: 21px;
+  color: grey;
+  margin-left: 105px;
+}
