--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@
   height: 500px !important;
 }
 
-.rv-xy-plot__inner_380 {
+.rv-xy-plot__inner_380, .rv-xy-plot__inner_500 {
   height: auto !important;
 }
 
